<project xmlns="http://maven.apache.org/POM/4.0.0"
	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<groupId>eu.su.mas</groupId>
	<artifactId>Mas_treasure_hunt</artifactId>
	<version>0.0.1-SNAPSHOT</version>
	<name>MAS_treasure_hunt</name>

	<description>Project used for both research and teaching around distributed systems and multi-agents systems</description>

	<organization>
		<name>SU-LIP6-SMA</name>
		<url>http://www.lip6.fr/recherche/team.php?id=380</url>
	</organization>
	
	<distributionManagement>
		<downloadUrl>http://dedale.gitlab.io</downloadUrl>
	</distributionManagement>

	<developers>
		<developer>
			<name>Cédric HERPSON</name>
			<id>hc</id>
			<email>cedric.herpson@lip6.fr</email>
		</developer>
	</developers>


	<properties>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
	</properties>


	<repositories>
		<repository>
			<id>jitpack.io</id>
			<url>https://jitpack.io</url>
		</repository>
	</repositories>

	<dependencies>
		<!-- from Jdk11, javaFx is no longer part of JVM -->

		<dependency>
			<groupId>org.openjfx</groupId>
			<artifactId>javafx</artifactId>
			<version>13.0.2</version>
			<type>pom</type>
		</dependency>

		<dependency>
			<groupId>org.openjfx</groupId>
			<artifactId>javafx-web</artifactId>
			<version>13.0.2</version>
		</dependency>

		<dependency>
			<groupId>org.openjfx</groupId>
			<artifactId>javafx-swing</artifactId>
			<version>13.0.2</version>
		</dependency>

		<dependency>
			<groupId>org.openjfx</groupId>
			<artifactId>javafx-media</artifactId>
			<version>13.0.2</version>
		</dependency>

		<dependency>
			<groupId>org.openjfx</groupId>
			<artifactId>javafx-graphics</artifactId>
			<version>13.0.2</version>
		</dependency>

		<dependency>
			<groupId>org.openjfx</groupId>
			<artifactId>javafx-fxml</artifactId>
			<version>13.0.2</version>
		</dependency>

		<dependency>
			<groupId>org.openjfx</groupId>
			<artifactId>javafx-controls</artifactId>
			<version>13.0.2</version>
		</dependency>

		<dependency>
			<groupId>org.openjfx</groupId>
			<artifactId>javafx-base</artifactId>
			<version>13.0.2</version>
		</dependency>

		<!--  Jade -->
		<dependency>
    		<groupId>com.gitlab.jade-project</groupId>
    		<artifactId>jade</artifactId>
    		<version>master-SNAPSHOT</version>
		</dependency>

		<!-- GraphStream -->

		<dependency>
			<groupId>org.graphstream</groupId>
			<artifactId>gs-core</artifactId>
			<version>2.0</version>
		</dependency>

		<dependency>
			<groupId>org.graphstream</groupId>
			<artifactId>gs-algo</artifactId>
			<version>2.0</version>
		</dependency>
		<dependency>
			<groupId>org.graphstream</groupId>
			<artifactId>gs-ui-javafx</artifactId>
			<version>2.0</version>
		</dependency>
		<dependency>
			<groupId>org.graphstream</groupId>
			<artifactId>gs-ui-swing</artifactId>
			<version>2.0</version>
		</dependency>

		<dependency>
			<groupId>bouncycastle</groupId>
			<artifactId>bcmail-jdk14</artifactId>
			<version>139</version>
		</dependency>

		<!-- PlantUml -->
		<dependency>
			<groupId>net.sourceforge.plantuml</groupId>
			<artifactId>plantuml</artifactId>
			<version>8036</version>
		</dependency>

		<!-- Junit -->
		<dependency>
			<groupId>junit</groupId>
			<artifactId>junit</artifactId>
			<version>4.12</version>
		</dependency>

		<!-- https://mvnrepository.com/artifact/com.fasterxml.jackson.core/jackson-databind -->
		<dependency>
			<groupId>com.fasterxml.jackson.core</groupId>
			<artifactId>jackson-databind</artifactId>
			<version>2.12.3</version>
		</dependency>
		<!-- https://mvnrepository.com/artifact/com.fasterxml.jackson.core/jackson-core -->
		<dependency>
			<groupId>com.fasterxml.jackson.core</groupId>
			<artifactId>jackson-core</artifactId>
			<version>2.12.3</version>
		</dependency>

		<!-- dedaleRoot and Delta -->
		<!-- 
		<dependency>
			<groupId>eu.su.mas</groupId>
			<artifactId>dedale</artifactId>
			<version>1</version>
			<scope>system</scope>
			<systemPath>${project.basedir}/libs/dedale/dedale.jar</systemPath>
		</dependency>
		-->
		<dependency>
		    <groupId>com.gitlab.dedale</groupId>
	    	<artifactId>dedale</artifactId>
	    	<version>-SNAPSHOT</version>
		</dependency>
		
		<dependency>
		    <groupId>com.gitlab.deltas</groupId>
	    	<artifactId>mas</artifactId>
	    	<version>-SNAPSHOT</version>
		</dependency>
		
		<dependency>
			<groupId>com.gitlab.herpsonc</groupId>
			<artifactId>tools</artifactId>
			<version>-SNAPSHOT</version>
		</dependency>
        <dependency>
            <groupId>org.projectlombok</groupId>
            <artifactId>lombok</artifactId>
            <version>RELEASE</version>
            <scope>compile</scope>
        </dependency>

		<dependency>
			<groupId>org.apache.commons</groupId>
			<artifactId>commons-collections4</artifactId>
			<version>4.4</version>
		</dependency>

    </dependencies>

	<build>
		<plugins>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>3.8.1</version>
				<configuration>
					<source>9</source>
					<target>9</target>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.codehaus.mojo</groupId>
				<artifactId>exec-maven-plugin</artifactId>
				<version>3.0.0</version>
				<configuration>
					<mainClass>eu.su.mas.dedaleEtu.princ.Principal</mainClass>
				</configuration>
			</plugin>
		</plugins>
	</build>

</project>